--- a/style.css
+++ b/style.css
@@ -2,12 +2,22 @@ html {
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+*{
+    box-sizing: border-box;
+}
+
 body {
-background-color: gold;
+background-color: rgb(255, 223, 44);
 }
 
 a {
 
+}
+
+.header{
+    background-color: rgb(255, 255, 255);
+    padding: 20px;
+    text-align: center;
 }
 
 .my-pic {
@@ -23,4 +33,24 @@ text-decoration: none;
 
 #larry:hover{
 color:blue
+}
+
+.center{
+    position: absolute;
+    top: 0%;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+}
+
+.top-left{
+    position: absolute;
+    top: 8px;
+    left: 16px;
+    font-size: 18px;
+}
+
+.topnav{
+    overflow: hidden;
+    background-color: #333
 }
