--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 body {
 background-color: rgb(255, 223, 44);
+margin: 0;
 }
 
 a {
@@ -16,7 +17,7 @@ a {
 
 .header{
     background-color: rgb(255, 255, 255);
-    padding: 20px;
+    padding: 25px;
     text-align: center;
 }
 
@@ -50,7 +51,16 @@ color:blue
     font-size: 18px;
 }
 
+.topnav a{
+float: left;
+display: block;
+color: black;
+text-align: center; 
+padding: 14px 16px;
+text-decoration: none;
+}
+
 .topnav{
     overflow: hidden;
-    background-color: #333
+    background-color: rgb(105, 105, 105)
 }
