--- a/style.css
+++ b/style.css
@@ -92,14 +92,17 @@ color:blue
     font-size: 18px;
 }
 
-.info{
+.border{
     background-color: rgb(0, 0, 0);
-    border: 2px solid black;
-    margin:  auto;
-    width: 70%;
-    padding: 480px;
+    color: white;
+    border: 2px solid rgb(255, 255, 255);
+    width: 83%;
+    padding: 470px;
+    margin: 200px;
+
     
 }
+
 
 
 
