--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ background-color: rgb(255, 255, 255);
 margin: 0;
 }
 
+.container {
+    position: relative;
+}
+
 a {
 
 }
@@ -96,12 +100,13 @@ color:blue
     background-color: rgb(0, 0, 0);
     color: white;
     border: 2px solid rgb(255, 255, 255);
-    width: 83%;
-    padding: 470px;
+    width: 80%;
+    padding: 440px;
     margin: 200px;
 
     
 }
+
 
 
 
